Java 9 testing compatibility